Fix linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
   },
   "extends": ["airbnb-base"],
   "rules": {
-    "no-unused-vars": "off",
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
@@ -21,6 +20,9 @@
   },
   "ignorePatterns": [
     "dist/",
-    "build/"
+    "build/",
+    "node_modules/",
+    "modules/luxon.min.js"
+
   ]
 }
